src/css/photographer.css
#contact_modal {
    display: none;
}
.position_button {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.photograph-header {
    background-color: #FAFAFA;
    height: 300px;
    margin: 0 100px;
    display: flex;
    flex-direction: row;
}

.contact_button {
    font-size: 20px;
    font-weight: bold;
    color: white;
    padding: 11px;
    width: 170px;
    height: 70px;
    border: none;
    background-color: #901C1C;
    border-radius: 5px;
    cursor: pointer;
}

.modal {
    border-radius: 5px;
    background-color: #DB8876;
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 35px;
    margin: auto;
}

.modal header {
    justify-content: space-between;
    width: 100%;
}

.modal header img {
    cursor: pointer;
}

.modal header h2 {
    font-size: 64px;
    font-weight: normal;
    text-align: center;
}

.form {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
}

.form label {
    color: #312E2E;
    font-size: 36px;
}

.form div {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: self-start;
    margin-bottom: 26px;
}

.form input {
    width: 100%;
    height: 68px;
    border: none;
    border-radius: 5px;
}

.photographers-banner {
    display: flex;
    flex-direction: column;
    gap: 15px;
    text-wrap: nowrap;
}

#container-photo{
    display: flex;
    flex-wrap: wrap;
    gap: 45px;
    justify-content: center;
    margin: 20px;
}

.photo_form{
    display: flex;
    align-items: center;
    padding: 50px 8%;
}

.picture-container{
    display: flex;
    flex-direction: column;
    gap: 5px;

}
.picture-details{
    display: flex;
    justify-content: space-between;
}

.picture-likes{
    margin-left: 35px;
}

.picture-image{
    width: 350px;
    height: 300px;
}

